ucs-school-umc-wizards (6.0.0-1) unstable; urgency=medium

  * Bug #36276: make it possible to delete multiple schools

 -- Florian Best <best@univention.de>  Fri, 10 Apr 2015 13:13:42 +0200

ucs-school-umc-wizards (5.0.1-4) unstable; urgency=low

  * Bug #37154: fixed js code

 -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Sat, 21 Feb 2015 21:34:54 +0100

ucs-school-umc-wizards (5.0.1-3) unstable; urgency=low

  * Bug #37154: added UCR variable to disable length limit of usernames:
    ucsschool/ldap/check/username/lengthlimit

 -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Sat, 21 Feb 2015 21:10:50 +0100

ucs-school-umc-wizards (5.0.1-2) unstable; urgency=low

  * Bug #37154: added UCR variable to disable length limit of usernames

 -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 20 Feb 2015 18:36:40 +0100

ucs-school-umc-wizards (5.0.1-1) unstable; urgency=low

  * Bug #37154: limit length of usernames to prevent windows logon errors

 -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 12 Feb 2015 16:30:29 +0100

ucs-school-umc-wizards (5.0.0-1) unstable; urgency=medium

  * Bug #35892: Start UCS 4.0 development

 -- Florian Best <best@univention.de>  Wed, 05 Nov 2014 14:59:53 +0100

ucs-school-umc-wizards (4.0.31-2) unstable; urgency=low

  * Bug #34997: Clarified grid columns, widget labels, etc.

 -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 14 Aug 2014 11:19:29 +0200

ucs-school-umc-wizards (4.0.31-1) unstable; urgency=low

  * Bug #35032: fixed tooltip and regex for educational slave

 -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 03 Jun 2014 09:57:30 +0200

ucs-school-umc-wizards (4.0.30-1) unstable; urgency=low

  * Bug #34173: adapted wording

 -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 26 May 2014 21:21:42 +0200

ucs-school-umc-wizards (4.0.29-1) unstable; urgency=low

  * Bug #34166: adapted wording
